<!--
  ~     Copyright (C) 2023  Akane Foundation
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Symphonica</string>
    <string name="default_album_number" translatable="false">0</string>
    <string name="default_play_time" translatable="false">0:00</string>
    <string name="full_sheet_playlist_location">%1$s in %2$s songs</string>
    <string name="playlist_metadata_information" translatable="false">%1$s • %2$s</string>
    <string name="library_album_view_album">Album</string>
    <string name="library_album_view_more_information">Information</string>
    <string name="library_album_view_unknown_album">Unknown Album</string>
    <string name="library_album_view_unknown_artist">Unknown Artist</string>
    <string name="library_album_view_unknown_year">Unknown Year</string>
    <string name="library_list_metadata" translatable="false">%1$s - %2$s</string>
    <string name="library_tab_album">Album</string>
    <string name="library_tab_list">List</string>
    <string name="loading_your_library">Loading your library.</string>
    <string name="navigation_view_all_song">Library</string>
    <string name="navigation_view_settings">Settings</string>
    <string name="navigation_view_subtitle">Welcome back!</string>
    <string name="settings_app_name">App Name</string>
    <string name="settings_version">Version</string>
    <string name="settings_version_format" translatable="false">%1$s(%2$s)</string>
    <string name="settings_version_tag">Unknown Version (Unknown VSC Version)</string>
    <string name="sheet_no_playing">No Song Playing</string>
    <string name="sheet_now_playing">Now Playing</string>
    <string name="unknown_album_and_artist">Unknown Artist • Unknown Album</string>
    <string name="unknown_song">Unknown Song</string>
    <string name="desc_album_cover">Album Cover</string>
    <string name="desc_play_button">Play Button</string>
    <string name="desc_quit_button">Quit Button</string>
    <string name="desc_more">More</string>
    <string name="desc_slider">Slider</string>
    <string name="dialog_song_info">Song Info</string>
    <string name="dialog_song_dismiss">Dismiss</string>
    <string name="dialog_song_mediastore_id">Mediastore ID</string>
    <string name="dialog_song_name">Song Name</string>
    <string name="dialog_song_artist">Artist</string>
    <string name="dialog_song_unknown_artist">Unknown Artist</string>
    <string name="dialog_song_unknown_song">Unknown Song</string>
    <string name="dialog_song_unknown_id">Unknown ID</string>
    <string name="dialog_song_album">Album</string>
    <string name="dialog_song_unknown_album">Unknown Album</string>
    <string name="dialog_song_unknown_time">Unknown Time</string>
    <string name="dialog_song_duration">Duration (ms)</string>
    <string name="dialog_song_unknown_location">Unknown location</string>
    <string name="dialog_song_path">Path</string>
    <string name="library_album_view_play">Play</string>
    <string name="library_album_view_shuffle">Shuffle</string>
    <string name="library_album_view_album_art">Album art</string>
    <string name="settings_symphonica_icon">Symphonica Icon</string>
    <string name="settings_contributors_content" translatable="false">AkaneTan, CrisBalGreece, Nift4, NurKeinNeid</string>
    <string name="settings_contributors_content_alphabet">(Alphabetic Order)</string>
    <string name="settings_contributors">Contributors</string>
    <string name="settings_media">Media</string>
    <string name="settings_glide_enable_cache">Enable cache</string>
    <string name="settings_glide_enable_cache_content">This will enable glide\'s cache.</string>
    <string name="dialog_album_info">Album Info</string>
    <string name="dialog_album_year">Year</string>
    <string name="library_view_filter">Filter</string>
    <string name="dialog_long_press_title">Options</string>
    <string name="dialog_long_press_add_to_next">Add to next</string>
    <string name="dialog_long_press_add_to_next_content">Add this song to your playlist</string>
    <string name="dialog_long_press_check_album">Check album</string>
    <string name="dialog_long_press_check_album_content">Check this song\'s album information</string>
    <string name="settings_load">Load</string>
    <string name="settings_force_re_order">Force re-order album</string>
    <string name="settings_force_re_order_content">Force album re-ordering when first loading</string>
    <string name="settings_force_dark_mode">Force dark mode</string>
    <string name="settings_force_dark_mode_content">This will make night everlasting</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_enable_list_shuffle">Enable list shuffle</string>
    <string name="settings_enable_list_shuffle_content">Make shuffle generates a new song list</string>
    <string name="settings_behavior">Behavior</string>
    <string name="navigation_home">Home</string>
    <string name="home_greetings">Hello!</string>
    <string name="settings_enable_akane_content">You enabled what?</string>
    <string name="settings_enable_akane">Enable akane</string>
    <string name="playlist_active_song">Active song</string>
    <string name="home_today_shuffle">Today\'s Shuffle</string>
    <string name="home_recent_added">Recently added</string>
    <string name="home_history_view_title">History</string>
    <string name="home_history_clear_all">Clear all</string>
    <string name="home_history_counter_song">%1$s Song</string>
    <string name="home_history_counter_songs">%1$s Songs</string>
    <string name="settings_library_shuffle_button">Enable library shuffle button</string>
    <string name="settings_library_shuffle_button_summary">Shuffle library with one click</string>
    <string name="settings_colorful_buttons">Colorful buttons</string>
    <string name="settings_colorful_buttons_summary">Use different colors for homepage buttons</string>
    <string name="home_history_view_stub_title">0 Song</string>
    <string name="home_playlist_view_add_playlist">Add playlist</string>
    <string name="home_playlist_view_remove_playlist">Remove playlist</string>
    <string name="home_playlist_add_view_title">Add playlist</string>
    <string name="home_playlist_add_view_name_empty">Playlist name cannot be empty!</string>
    <string name="home_playlist_add_view_playlist_name">Playlist name</string>
    <string name="home_playlist_add_view_playlist_desc">Description</string>
    <string name="unknown_playlist">Unknown playlist</string>
    <string name="default_description">No description</string>
    <string name="home_playlist_view_title">Playlist</string>
    <string name="full_sheet_playlist_location_single">%1$s in %2$s song</string>
    <string name="settings_enable_squiggly_progress_bar">Enable squiggly progress bar</string>
    <string name="settings_enable_squiggly_progress_bar_summary">Come up with the flow</string>
    <string name="dialog_timer_title">Timer</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Control Symphonica at your homepage!</string>
</resources>