<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) 2023 AkaneWork Organization
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU Affero General Public License as
  ~     published by the Free Software Foundation, either version 3 of the
  ~     License, or (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU Affero General Public License for more details.
  ~
  ~     You should have received a copy of the GNU Affero General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_song_album"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingRight="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_album_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_song_unknown_album" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_album_year"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingRight="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_album_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/library_album_view_unknown_year" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_song_artist"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingRight="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_album_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_song_unknown_artist" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_song_duration"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingRight="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_album_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_song_unknown_time" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>