<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) 2023  Akane Foundation
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/full_size_sheet_player"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="48dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/miniplayer_quit"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:backgroundTint="?attr/colorSurface"
                    android:contentDescription="@string/desc_quit_button"
                    android:elevation="0dp"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    app:icon="@drawable/ic_expand_more"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="30sp"
                    app:iconTint="?attr/colorControlNormal"
                    tools:ignore="RedundantDescriptionCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text="@string/sheet_now_playing"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="TextSizeCheck" />

                    <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/miniplayer_song_path"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/unknown_song"
                            android:textColor="?attr/colorOnSurfaceVariant"
                            android:textSize="14sp" />
                    </androidx.core.widget.NestedScrollView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="end">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/miniplayer_song_info"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:backgroundTint="?attr/colorSurface"
                    android:contentDescription="@string/desc_more"
                    android:elevation="0dp"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    app:icon="@drawable/ic_more_vert"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="30sp"
                    app:iconTint="?attr/colorControlNormal" />
            </LinearLayout>

        </FrameLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rp_album_cover"
            android:clipToOutline="true">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/rp_album_cover"
                android:clipToOutline="true"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:padding="100dp"
                android:src="@drawable/ic_note"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/miniplayer_sheet_cover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clipToOutline="true"
                android:contentDescription="@string/desc_album_cover"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/miniplayer_song_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_song"
                android:textColor="?attr/colorOnSurface"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/miniplayer_sheet_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/library_album_view_unknown_artist"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/miniplayer_sheet_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/library_album_view_unknown_album"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="16sp" />
        </LinearLayout>

        <com.google.android.material.slider.Slider
            android:id="@+id/miniplayer_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_slider"
            android:enabled="false"
            android:value="0"
            android:valueFrom="0.0"
            android:valueTo="100.0"
            app:labelBehavior="gone"
            app:thumbRadius="6dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/miniplayer_now_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/default_play_time"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/miniplayer_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/default_play_time"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="14sp" />
        </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/miniplayer_control_button"
            style="?attr/floatingActionButtonLargeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/desc_play_button"
            android:src="@drawable/ic_sheet_play"
            app:elevation="0dp"
            app:fabCustomSize="64dp"
            tools:ignore="RedundantDescriptionCheck" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>