<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) 2023 AkaneWork Organization
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU Affero General Public License as
  ~     published by the Free Software Foundation, either version 3 of the
  ~     License, or (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU Affero General Public License for more details.
  ~
  ~     You should have received a copy of the GNU Affero General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <FrameLayout
        android:id="@+id/dialog_add_to_next"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:longClickable="true"
        android:paddingStart="24dp"
        android:paddingTop="10dp"
        android:paddingEnd="24dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_long_press_add_to_next"
                android:textColor="?attr/colorOnSurface"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_long_press_add_to_next_content"
                android:textColor="?attr/colorOnSurfaceVariant" />
        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/dialog_check_album"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:longClickable="true"
        android:paddingStart="24dp"
        android:paddingTop="10dp"
        android:paddingEnd="24dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_long_press_check_album"
                android:textColor="?attr/colorOnSurface"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_long_press_check_album_content"
                android:textColor="?attr/colorOnSurfaceVariant" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>