<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:clickable="true"
    android:longClickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground">

    <TextView
        android:id="@+id/song_uri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="56dp"
            android:id="@+id/song_cover"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:layout_height="56dp"
            android:clipToOutline="true"
            android:background="@drawable/ic_album_cover_ripple"
            android:src="@drawable/ic_album_default_cover"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/song_title"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:letterSpacing="0.01"
                android:text="@string/unknown_song"
                android:textColor="?attr/colorOnSurface"
                android:ellipsize="end"
                android:singleLine="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/song_meta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="14sp"
                android:maxEms="10"
                android:singleLine="true"
                android:text="@string/unknown_album_and_artist" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/song_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="24dp"
        android:textSize="12sp"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:text="@string/default_play_time" />

</FrameLayout>